_src/assets/css/style.css
/* ... */
table {
  border-collapse: separate;
  border-spacing: 0;
  border-width: 0.085em 0 0 0.085em;
  padding: 0 !important;
  table-layout: fixed;
  /* Prevents HTML tables from becoming too wide */
  width: 100%;
}

caption,
th,
td {
  font-weight: normal;
  text-align: left;
}

th {
  font-weight: 700;
}

th,
td {
  border-width: 0 0.085em 0.085em 0;
  padding: var(--s-2);
}

/* Forms */
label {
  font-weight: 700;
}

input[type="text"],
input[type="email"],
input[type="search"],
textarea {
  background-color: var(--background);
  border: 0.085em solid var(--lighttext);
  border-radius: 0.085em;
  padding: var(--s-2);
  -webkit-appearance: none;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="search"]:focus,
textarea:focus {
  border-color: var(--text);
  outline: 2px dashed var(--primary);
  outline-offset: 2px;
}

textarea {
  padding-left: var(--s-2);
  width: 100%;
}

button,
.button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
  background-color: var(--primary);
  border: 0.085em solid var(--primary);
  border-radius: 0.085em;
  color: var(--background);
  cursor: pointer;
  font-weight: 700;
  padding: var(--s-1) var(--s-2);
  position: relative;
  -webkit-appearance: none;
}

button:hover,
.button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover {
  border-color: var(--text);
  outline: 2px solid var(--text);
  outline-offset: 2px;
}

button:active,
.button:active,
input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {
  top: 2px;
}

button:focus,
.button:focus,
input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus {
  border-color: var(--text);
  outline: 2px dashed var(--primary);
  outline-offset: 2px;
}

.button.button-transparent {
  background-color: transparent;
  border-color: transparent;
  color: var(--text);
}

.button.button-transparent:hover,
.button.button-transparent:focus {
  background-color: var(--primary);
  border-color: var(--text);
  color: var(--background);
}

.email-signup input {
  margin: 0 0.25em 0.25em 0;
}

button > svg,
.button > svg {
  display: inline-block;
  vertical-align: middle;
}

.alert {
  align-items: flex-start;
  display: flex;
  margin-top: var(--s-4);
  animation: slide-up 250ms ease;
}

.alert[data-state="error"] {
  background-color: var(--error);
}

.alert[data-state="success"] {
  background-color: var(--success);
}

.alert svg {
  position: relative;
  margin-right: var(--s-1);
  top: 4px;
}

label + .inline-field-control {
  margin-top: var(--s-4);
}

@keyframes slide-up {
  0% {
    opacity: 0;
    transform: translateY(0.4rem);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Formatting */
hr {
  color: var(--lighttext);
  height: var(--s-4);
  margin-top: 0;
}

ul,
ol {
  margin-left: var(--s1);
  margin-top: 0;
  padding: 0;
}

ul {
  list-style: disc;
}

ol {
  list-style: decimal;
}

li > ul,
li > ol {
  margin-bottom: 0;
  margin-left: 1.4em;
  margin-left: var(--s1);
}

dt {
  border-bottom: 0.085em solid var(--lighttext);
  font-weight: 700;
  margin-bottom: var(--s-1);
}

dd {
  margin-bottom: var(--s1);
  margin-left: var(--s1);
  margin-top: 0;
}

table {
  width: 100%;
}

figcaption {
  font-size: 0.9rem;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

/* Navigation */
.site-navigation ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.site-navigation a {
  font-weight: 700;
  padding: var(--s-2);
  text-decoration: none;
}

.site-navigation a:hover {
  text-decoration: underline;
}

/* Post Navigation */
.issue-pagination a {
  font-size: 0.9rem;
  font-weight: 700;
  text-decoration: none;
}

.issue-pagination svg,
.issue-pagination a {
  display: inline-block;
  vertical-align: middle;
}

/* Links */
a {
  color: var(--primary);
  position: relative;
  text-decoration: underline;
}

a:hover {
  outline: 0;
  text-decoration: none;
}

a:focus {
  background-color: var(--primary);
  color: var(--background);
  outline: 2px dashed var(--primary);
  outline-offset: 2px;
  text-decoration: none;
}

a:active {
  outline: 0;
  top: 2px;
}

.skip-link {
  font-size: 0.9rem;
  font-weight: 700;
  left: var(--s2);
  max-width: none;
  padding: var(--s-1);
  position: absolute;
  top: var(--s2);
  z-index: 2;
}

.skip-link.focusable:focus {
  position: absolute;
}

[tabindex="-1"]:focus {
  outline: 0 none;
}

.image-link {
  display: block;
}

.site-title:focus {
  background-color: transparent;
}

/* Layout */
body {
  border-left: 0.75em solid var(--secondary);
  border-right: 0.75em solid var(--secondary);
}

body::before {
  background: var(--secondary);
  content: "";
  height: 0.75em;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

body::after {
  background: var(--secondary);
  bottom: 0;
  content: "";
  height: 0.75em;
  left: 0;
  position: fixed;
  width: 100%;
  z-index: 1;
}

.inner-wrapper {
  margin: 0 auto;
  max-width: 60rem;
  padding: var(--s3) var(--s0);
}

.site-header .inner-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.site-title,
.site-navigation {
  align-self: center;
}

.site-footer .inner-wrapper {
  text-align: center;
}

.header > * {
  max-width: var(--measure);
}

.header > h1 {
  max-width: var(--measure-narrow);
}

.content h2,
.content h3,
.content h4 {
  max-width: var(--measure-narrow);
}

.content > h2 + *,
.content > h3 + *,
.content > h4 + *,
.content > dt + * {
  margin-top: var(--s-3);
}

.content p,
.content li,
.content dt,
.content dd,
.content .signup-alert {
  max-width: var(--measure);
}

.content {
  margin-top: var(--s-3);
}

.issue .content {
  margin-top: var(--s1);
}

/* Issues */
.issue-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.issue-list .issue {
  margin-top: var(--s3);
}

.issue-list .issue-link {
  display: inline-block;
  max-width: var(--measure);
}
/* ... */

